[package]
name = "wasm-multi-party-ecdsa"
version = "0.1.0"
authors = ["aon <21188659+aon@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1.6"
curv-kzen = { version = "0.9", default-features = false, features = ["num-bigint"] }
futures = "0.3"
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-utils = "0.1.6"
hex = { version = "0.4", default-features = false }
js-sys = "0.3.60"
json-rpc-types = "1.2.0"
log = "0.4"
mpc-ecdsa-getrandom-hack = "*"
mpc-manager = { git = "https://github.com/coinfabrik/mpc-manager.git", default-features = false }
multi-party-ecdsa = { git = "https://github.com/ZenGo-X/multi-party-ecdsa", default-features = false }
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
round-based = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
thiserror = "1.0.38"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1.11", default-features = false, features = ["sync"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.24"
wasm-bindgen-rayon = "1.0"
wasm-log = "0.3"
web-sys = { version = "0.3", features = ["DomException", "MessageEvent", "WebSocket"] }

[patch.crates-io]
round-based = { git = "https://github.com/coinfabrik/round-based-protocol.git", branch = "wasm-fixes" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
